# pyTheiaSfM

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  MANIFEST.in  README.md  build_and_install.sh  conftest.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  setup_old.py
applications/: CMakeLists.txt  build_1dsfm_reconstruction.cc  build_1dsfm_reconstruction_flags.txt  build_reconstruction.cc  build_reconstruction_flags.txt  colorize_reconstruction.cc  command_line_helpers.h  compare_reconstructions.cc  compute_reconstruction_statistics.cc  convert_bundle_file.cc  convert_nvm_file.cc  convert_sift_key_file.cc  convert_theia_reconstruction_to_bundler_file.cc  create_calibration_file_from_exif.cc  create_reconstruction_from_strecha_dataset.cc  estimate_covariance_for_tracks.cc  export_reconstruction_to_pmvs.cc  export_to_nvm_file.cc  extract_features.cc  print_reconstruction_statistics.h  test_align_recon.cc  test_inv_track_ba.cc  undistort_images.cc  verify_1dsfm_input.cc  view_reconstruction.cc  write_reconstruction_ply_file.cc
libraries/: CMakeLists.txt
libraries/Sophus/: CMakeLists.txt
libraries/akaze/: CMakeLists.txt
libraries/akaze/cimg/: CImg.h
libraries/akaze/cmake/: CheckSSEFeatures.cmake  OptimizeCompilerFlags.cmake
libraries/akaze/src/: AKAZEConfig.h  convolution.cpp  nldiffusion_functions.cpp
libraries/cereal/: .part  CMakeLists.txt
libraries/flann/: CMakeLists.txt
libraries/gtest/: CMakeLists.txt
libraries/optimo/: CMakeLists.txt
libraries/pybind11/: CMakeLists.txt
libraries/statx/: CMakeLists.txt
libraries/stlplus3/: CMakeLists.txt
libraries/visual_sfm/: CMakeLists.txt
libraries/vlfeat/: CMakeLists.txt
libraries/vlfeat/vl/: generic.c  gmm.c  kdtree.c  kmeans.c  vlad.c
src/pytheia/: CMakeLists.txt  __init__.py  py.typed  pytheia.pyi  pytheia_pybind.cc  pytheia_pybind.h  sfm_pipeline.py  test.ply
src/pytheia/io/: io.cc  io.h
src/pytheia/matching/: matching.cc  matching.h  solvers.cc  solvers.h
src/pytheia/math/: math.cc  math.h
src/pytheia/mvs/: mvs.cc  mvs.h
src/pytheia/pytheia/: __init__.pyi  io.pyi  matching.pyi  mvs.pyi  sfm.pyi  solvers.pyi
src/pytheia/sfm/: sfm.cc  sfm.h
src/pytheia/solvers/: solvers.cc  solvers.h
src/pytheia/util/: util.cc  util.h
src/theia/: CMakeLists.txt
src/theia/alignment/: alignment.h
src/theia/image/: CMakeLists.txt  image.cc  image.h  image_cache.cc  image_cache.h  image_test.cc
src/theia/io/: CMakeLists.txt  bundler_file_reader.cc  bundler_file_reader.h  eigen_serializable.h  import_nvm_file.cc  import_nvm_file.h  io_wrapper.cc  io_wrapper.h  populate_image_sizes.cc  read_1dsfm.cc  read_bundler_files.cc  read_calibration.cc  read_calibration.h  read_calibration_test.cc  read_keypoints_and_descriptors.cc  read_strecha_dataset.cc  reconstruction_reader.cc  reconstruction_writer.cc  reconstruction_writer.h  sift_binary_file.cc  sift_binary_file.h  sift_text_file.cc  write_bundler_files.cc  write_calibration.cc  write_calibration_test.cc  write_colmap_files.cc  write_keypoints_and_descriptors.cc  write_matches.cc  write_nerfstudio.cc  write_nerfstudio.h  write_nvm_file.cc  write_ply_file.cc  write_ply_file.h  write_sdfstudio.cc  write_sdfstudio.h
src/theia/matching/: CMakeLists.txt  brute_force_feature_matcher.cc  cascade_hasher.cc  cascade_hasher.h  cascade_hashing_feature_matcher.h  create_feature_matcher.cc  create_feature_matcher.h  distance_test.cc  feature_correspondence.h  feature_correspondence_test.cc  feature_matcher.cc  feature_matcher_options.h  feature_matcher_utils.cc  feature_matcher_utils_test.cc  fisher_vector_extractor.cc  fisher_vector_extractor.h  graph_match.cc  graph_match.h  guided_epipolar_matcher.cc  guided_epipolar_matcher.h  guided_epipolar_matcher_test.cc  image_pair_match.h  in_memory_features_and_matches_database.h  keypoint.h  keypoints_and_descriptors.h  rocksdb_features_and_matches_database.cc  rocksdb_features_and_matches_database.h
src/theia/math/: CMakeLists.txt  bcm_sdp_solver.h  closed_form_polynomial_solver.cc  closed_form_polynomial_solver.h  closed_form_polynomial_solver_test.cc  constrained_l1_solver.cc  distribution.h  find_polynomial_roots_companion_matrix_test.cc  find_polynomial_roots_jenkins_traub.cc  find_polynomial_roots_jenkins_traub_test.cc  l1_solver.h  l1_solver_test.cc  math_wrapper.cc  math_wrapper.h  nullspace.h  polynomial.cc  polynomial.h  polynomial_test.cc  qp_solver.cc  qp_solver_test.cc  rank_restricted_sdp_solver.cc  rank_restricted_sdp_solver.h  rbr_sdp_solver.cc  rbr_sdp_solver.h  reservoir_sampler_test.cc  riemannian_staircase.cc  riemannian_staircase.h  rotation.cc  rotation.h  rotation_test.cc  sdp_solver.h  solver_options.h  solver_summary.h  util.h
src/theia/mvs/: view_selection_mvsnet.cc  view_selection_mvsnet.h
src/theia/sfm/: CMakeLists.txt  camera_intrinsics_prior.h  colorize_reconstruction.cc  create_and_initialize_ransac_variant.h  descriptor_extractor_types.h  estimate_track.cc  estimate_track.h  estimate_twoview_info.cc  estimate_twoview_info.h  exif_reader.cc  exif_reader.h  exif_reader_test.cc  extract_maximally_parallel_rigid_subgraph.cc  extract_maximally_parallel_rigid_subgraph_test.cc  feature.h  feature_extractor.cc  feature_extractor.h  feature_extractor_and_matcher.cc  feature_extractor_and_matcher.h  filter_view_graph_cycles_by_rotation_test.cc  filter_view_pairs_from_orientation.cc  filter_view_pairs_from_orientation_test.cc  filter_view_pairs_from_relative_translation.cc  filter_view_pairs_from_relative_translation_test.cc  find_common_tracks_by_feature_in_reconstructions.cc  find_common_tracks_by_feature_in_reconstructions.h  find_common_tracks_in_views.cc  find_common_tracks_in_views.h  find_common_tracks_in_views_test.cc  find_common_views_by_name_test.cc  global_reconstruction_estimator.cc  global_reconstruction_estimator.h  gps_converter.cc  gps_converter_test.cc  hybrid_reconstruction_estimator.cc  hybrid_reconstruction_estimator.h  incremental_reconstruction_estimator.cc  incremental_reconstruction_estimator.h  incremental_reconstruction_estimator_test.cc  (+34 more)
(+627 files in other folders)
